--- a/data/blog/farewell-drupal-9-the-swan-song-of-an-era.mdx
+++ b/data/blog/farewell-drupal-9-the-swan-song-of-an-era.mdx
@@ -1,5 +1,5 @@
 ---
-title: Farewell, Drupal 9: The Swan Song of an Era
+title: The Swan Song of an Unremarkable and Brief Era
 date: '2022-12-23'
 tags: ['drupal']
 draft: false
