--- a/data/blog/farewell-drupal-9-the-swan-song-of-an-era.mdx
+++ b/data/blog/farewell-drupal-9-the-swan-song-of-an-era.mdx
@@ -3,7 +3,7 @@ title: The Swan Song of an Unremarkable and Brief Era
 date: '2022-12-23'
 tags: ['drupal']
 draft: false
-summary: Getting ready for D10.
+summary: Getting ready for D10. Even if you never got around to 8 => 9.
 images: [/static/images/sunsetd9.png]
 layout: PostLayout
 canonicalUrl:
@@ -13,7 +13,7 @@ Well, folks, it's the end of the road for Drupal 9. The good people at Drupal.or
 
 ![Drupal 9, riding off into the sunset](/static/images/sunsetd9.png 'Drupal 9 sunset')
 
-###New Features and Improvements
+### New Features and Improvements
 
 As expected, the Drupal 9.5 release comes with its fair share of new improvements and functionality, without breaking backward compatibility for public APIs. But beware, because if you're playing around with experimental modules, you might need to update your custom or contributed modules and themes. And if you're a translator, keep an eye out for string changes and additions – just, you know, in case.
 
