--- a/data/blog/the-importance-of-keeping-up-with-drupals-weekly-security-releases.mdx
+++ b/data/blog/the-importance-of-keeping-up-with-drupals-weekly-security-releases.mdx
@@ -1,5 +1,5 @@
 ---
-title: The Importance of Keeping Up with Drupal's Weekly Security Releases
+title: "The Importance of Keeping Up with Drupal's Weekly Security Releases"
 date: '2023-03-7'
 tags: ['drupal']
 draft: false
