--- a/data/blog/the-importance-of-keeping-up-with-drupals-weekly-security-releases.mdx
+++ b/data/blog/the-importance-of-keeping-up-with-drupals-weekly-security-releases.mdx
@@ -3,10 +3,9 @@ title: 'The Importance of Keeping Up with Weekly Security Releases for Drupal'
 date: '2023-03-7'
 tags: ['drupal']
 draft: false
-summary: Whether you are a Drupal developer or a site owner, there is one thing you need to be aware of: the importance of keeping up with weekly security releases. No joke: your site's safety and data are on the line.
+summary: Whether you are a Drupal developer or a site owner, there is one thing you need to be aware of: the importance of keeping up with weekly security releases. No joke; your site's safety and data are on the line.
 images: []
 layout: PostLayout
-canonicalUrl:
 ---
 
 Whether you're a developer or a site owner, there's one thing you need to be aware of: the importance of keeping up with Drupal's weekly security releases. No joke: your site's safety and your users' data are on the line.
