--- a/data/blog/farewell-drupal-9-the-swan-song-of-an-era.mdx
+++ b/data/blog/farewell-drupal-9-the-swan-song-of-an-era.mdx
@@ -1,9 +1,10 @@
 ---
-title: The Swan Song of an Unremarkable and Brief Era
+title: Farewell, D9, We Barely Knew Ya
+subtitle: The Swan Song of an Unremarkable and Brief Era
 date: '2022-12-23'
 tags: ['drupal']
 draft: false
-summary: Getting ready for D10. Even if you never got around to 8 => 9.
+summary: Getting ready for D10. Even if you never got around to 8 => 9. Even if you didn't know there even _was_ a 9. (If you didn't know there was an 8, get back under your rock and stop reading.)
 images: [/static/images/sunsetd9.png]
 layout: PostLayout
 canonicalUrl:
